--- a/src/assets/scss/page/notFound.scss
+++ b/src/assets/scss/page/notFound.scss
@@ -1,11 +1,62 @@
-.notFound{
-    height: 80vh;
-    background-color: $bgColorSecGray;
+.notFound {
+  height: 90vh;
+  width: 100%;
+  max-width: 1920px;
+  background-color: $primaryColorGreen;
+  background-image: url("/src/assets/images/vote/grid.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  color: $mainTextColor;
+  @media (width <= 768px) {
+    height: 45vh;
+  }
+  .errorTitle {
+    position: absolute;
+    top: 12vw;
+    right: 42.8vw;
     text-align: center;
-    h1{
-        color: $secColorOrange;
-        
-        padding: 20vh 0 10vh;
+    color: $primaryColorYellow;
+    @media (width <= 768px) {
+      right: 32.9vw;
     }
-
+  }
+  .cautionSign {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    bottom: 0;
+    @media (width <= 768px) {
+      width: 150px;
+      height: 150px;
+    }
+  }
+  .errorChicken {
+    position: absolute;
+    width: 100px;
+    height: 120px;
+    bottom: 0;
+    left: 25vw;
+    @media (width <= 768px) {
+      width: 50px;
+      height: 60px;
+      left: 15vw;
+    }
+  }
+  .errorAlpaca {
+    position: absolute;
+    width: 180px;
+    height: 220px;
+    bottom: 0;
+    right: 26vw;
+    @media (width <= 768px) {
+      width: 90px;
+      height: 110px;
+      right: 10vw;
+    }
+  }
 }
